      the playlist from the top (or whereever the navigator thinks it should 
      start. (BR 176445)
    * Fixed local playlists being renamed to blank when user hits cancel
    * Fixed giant Edit Filter dialog with some translations. (BR 197566)
    * Files browser remembers its view mode. (BR 197122)
    * Fixed non-Latin UTF-8 encoding tags not being correctly decoded.


VERSION 2.1.1
  FEATURES:
    * Compilations with more than 60 artists are supported.
    * Option to hide the context view.
    * Applets are now laid out according to two criteria: either fixed height
      or flowing to fill the CV. No more slivers of applets visible at the
      bottom.
    * Load contents of an m3u file if specified when running amarok from the
      command line. File must be local.
    * Added large source emblem in current track applet.

  CHANGES:
    * Removed option to purchase Magnatune.com albums using a Credit Card as
      this is unfortunately no longer supported by Magnatune.com. It is still
      possible to purchase albums using pre paid gift card codes, and all
      membership features still work.
    * Make it possible to delete multiple selected playlists at once from the 
      "My Playlists" category in the playlist browser.
    * Show info box in CV if no applets are visible.

  BUGFIXES:
    * Don't hide the "On/Off" button for Dynamic Playlists if the window is
      not tall enough. (BR 195886)
    * Make it possible to change the width of a playlist layout element if the 
      combined width of items in the row exceeds 100% (BR 195846)
    * Keep width slider and width display from overlapping when setting
      attributes on a playlist layout element.
    * Don't overwrite cached lyrics when lyrics script returns a "Not found" 
      result. (BR 195213)
    * Fixed the layout of the "Edit Track Details" dialog, which came up
      broken under some circumstances. (BR 195081)