@@ -126,6 +126,8 @@ VERSION 2.2-beta1
     * Fixed giant Edit Filter dialog with some translations. (BR 197566)
     * Files browser remembers its view mode. (BR 197122)
     * Fixed non-Latin UTF-8 encoding tags not being correctly decoded.
+    * Fixed track drag-and-drop problem when special characters are present
+      in file path. (BR 193878)
 
 
 VERSION 2.1.1
